--- a/E_railway/booking/templates/panel/base/base_admin.html
+++ b/E_railway/booking/templates/panel/base/base_admin.html
@@ -111,10 +111,10 @@
                 <a href="{% url 'user_management' %}" class="dashboard-nav-item"><i class="fas fa-users-cog"></i> User Management</a>
                 <a href="{% url 'ticket_form' %}" class="dashboard-nav-item"><i class="fas fa-ticket-alt"></i> Ticket Management</a>
                 <a href="#" class="dashboard-nav-item"><i class="fas fa-shield-alt"></i> Develops and Enforces Policies</a>
-                <a href="#" class="dashboard-nav-item"><i class="fas fa-tasks"></i> Employer Tasks</a>
+                <a href="{% url 'employer_task_list' %}" class="dashboard-nav-item"><i class="fas fa-tasks"></i> Employer Tasks</a>
                 <a href="{% url 'assign_task' %}" class="dashboard-nav-item"><i class="fas fa-tools"></i> Maintenance Tasks</a>
                 <a href="#" class="dashboard-nav-item"><i class="fas fa-chart-bar"></i> Analytics and Reporting</a>
-                <a href="#" class="dashboard-nav-item"><i class="fas fa-comment-alt"></i> Communication Management</a>
+                <a href="{% url 'communication_list' %}" class="dashboard-nav-item"><i class="fas fa-comment-alt"></i> Communication Management</a>
                 <a href="#" class="dashboard-nav-item"><i class="fas fa-wallet"></i> Manage Budget</a>
                 <a href="{% url 'security' %}" class="dashboard-nav-item"><i class="fas fa-lock"></i> Platform Settings</a>
                 <a href="#" class="dashboard-nav-item"><i class="fas fa-university"></i> Liaises with Government Agencies</a>
