--- a/E_railway/booking/templates/panel/passenger/communications/communication_list.html
+++ b/E_railway/booking/templates/panel/passenger/communications/communication_list.html
@@ -1,41 +1,66 @@
-{% extends "panel/base/base_clients.html" %}
+{% extends 'panel/base/base_passenger.html' %}
 {% load static %}
 
-{% block content %}
-<link rel="stylesheet" href="{% static 'css/communication.css' %}">
+{% block title %}Communication List{% endblock %}
 
-<div class="container mt-5">
-    <h2>Communications</h2>
+{% block content %}
+<div class="container">
+    <h1 class="text-center">Communications</h1>
     <div class="row">
         {% for communication in communications %}
-        <div class="col-md-4 mb-4">
-            <div class="card h-100 animate__animated animate__fadeIn">
-                <img src="{{ communication.photo.url }}" class="card-img-top" alt="{{ communication.title }}">
-                <div class="card-body">
-                    <h5 class="card-title">{{ communication.title }}</h5>
-                    <p class="card-text">{{ communication.description|slice:":100" }}...</p>
-                    <a href="{% url 'communication_detail' communication.pk %}" class="btn btn-primary">View</a>
-                    <a href="{% url 'download_communication_pdf' communication.pk %}" class="btn btn-secondary">Download PDF</a>
+            <div class="col-md-4">
+                <div class="card" data-aos="fade-up">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ communication.name }}</h5>
+                        <p class="card-text">{{ communication.description|truncatewords:10 }}</p>
+                        <button class="btn btn-primary view-details" data-id="{{ communication.id }}">View Details</button>
+                        <a href="{% url 'download_pdf' communication.id %}" class="btn btn-danger">Download as PDF</a>
+                    </div>
                 </div>
             </div>
-        </div>
         {% endfor %}
     </div>
 </div>
-<Script>// scripts.js
 
-    document.addEventListener('DOMContentLoaded', function () {
-        const cards = document.querySelectorAll('.card');
-    
-        // Add hover animation to cards
-        cards.forEach(card => {
-            card.addEventListener('mouseenter', function () {
-                card.classList.add('animate__pulse');
-            });
-            card.addEventListener('mouseleave', function () {
-                card.classList.remove('animate__pulse');
+<!-- Modal for displaying communication details -->
+<div class="modal fade" id="communicationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Communication Details</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div id="communication-details"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+<script>
+    AOS.init();
+
+    $(document).ready(function() {
+        $('.view-details').on('click', function() {
+            var communicationId = $(this).data('id');
+            $.ajax({
+                url: '/get_communication_details/' + communicationId + '/',
+                method: 'GET',
+                success: function(data) {
+                    // Insert the HTML from the response into the modal body
+                    $('#communication-details').html(data.html);
+                    $('#communicationModal').modal('show');
+                },
+                error: function() {
+                    alert('Error fetching details');
+                }
             });
         });
     });
-    </Script>
+</script>
 {% endblock %}
