update employer  panel

--- a/E_railway/booking/templates/panel/base/base_passenger.html
+++ b/E_railway/booking/templates/panel/base/base_passenger.html
@@ -102,8 +102,8 @@
                     <li><a href="{% url 'ticket_selection' %}" class="dashboard-nav-item"><i class="fas fa-briefcase"></i> Buy Ticket</a></li>
                     <li><a href="#" class="dashboard-nav-item"><i class="fas fa-credit-card"></i> Cancel Reservation</a></li>
                     <li><a href="{% url 'my_report' %}" class="dashboard-nav-item"><i class="fas fa-star"></i> My Report</a></li>
-                    <li><a href="#" class="dashboard-nav-item"><i class="fas fa-bell"></i> Rewards</a></li>
-                    <li><a href="#" class="dashboard-nav-item"><i class="fas fa-users"></i> History</a></li>
+                    <li><a href="{% url 'rewards_fidelity' %}" class="dashboard-nav-item"><i class="fas fa-bell"></i> Rewards</a></li>
+                    <li><a href="{% url 'ticket_history' %}" class="dashboard-nav-item"><i class="fas fa-users"></i> History</a></li>
                     <li><a href="#" class="dashboard-nav-item"><i class="fas fa-comments"></i> Messaging</a></li>
                     <li><a href="{% url 'communication_list' %}" class="dashboard-nav-item"><i class="fas fa-comments"></i> Communication</a></li>
                     <li><a href="{% url 'security_cleints' %}" class="dashboard-nav-item"><i class="fas fa-cogs"></i> Settings</a></li>
