update employer  panel

--- a/E_railway/booking/templates/panel/base/base_employer.html
+++ b/E_railway/booking/templates/panel/base/base_employer.html
@@ -124,11 +124,11 @@
             <nav class="dashboard-nav-list">
                 <a href="{% url 'employer_panel' %}" class="dashboard-nav-item active"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
                 <a href="{% url 'profile_employer' %}" class="dashboard-nav-item"><i class="fas fa-user-circle"></i> Profile Overview</a>
-                <a href="#" class="dashboard-nav-item"><i class="fas fa-ticket-alt"></i> Verify Tickets</a>
+                <a href="{% url 'verify_tickets' %}" class="dashboard-nav-item"><i class="fas fa-ticket-alt"></i> Verify Tickets</a>
                 <a href="#" class="dashboard-nav-item"><i class="fas fa-users"></i> Employee Management</a>
                 <a href="#" class="dashboard-nav-item"><i class="fas fa-train"></i> Train Scheduling</a>
                 <a href="#" class="dashboard-nav-item"><i class="fas fa-chart-line"></i> Monthly Analytics</a>
-                <a href="#" class="dashboard-nav-item"><i class="fas fa-inbox"></i> Messages</a>
+                <a href="#" class="dashboard-nav-item"><i class="fas fa-inbox"></i> Forum Messages</a>
                 <a href="{% url 'notifications' %}" class="dashboard-nav-item"><i class="fas fa-bell"></i> Notifications</a>
                 <a href="{% url 'communication_list_employer' %}" class="dashboard-nav-item"><i class="fas fa-comments"></i> Communication</a>
                 <a href="{% url 'setting_security' %}" class="dashboard-nav-item"><i class="fas fa-cogs"></i> Settings</a>
