--- a/E_railway/booking/templates/auth/register.html
+++ b/E_railway/booking/templates/auth/register.html
@@ -81,10 +81,10 @@
                     <label for="{{ form.password2.id_for_label }}">Confirm Password</label>
                     {{ form.password2 }}
                 </div>
-              <!--  <div class="form-group">
+              <div class="form-group">
                     <label for="{{ form.role.id_for_label }}">Role</label>
                     {{ form.role }}
-                </div>-->
+                </div>
                 <button type="submit" class="btn btn-primary btn-block">Register</button>
             </form>
             <div class="text-center mt-3">
