--- a/E_railway/booking/templates/panel/base/base_admin.html
+++ b/E_railway/booking/templates/panel/base/base_admin.html
@@ -113,12 +113,14 @@
                 <a href="{% url 'policy' %}" class="dashboard-nav-item"><i class="fas fa-shield-alt"></i> Develops and Enforces Policies</a>
                 <a href="{% url 'employer_task_list' %}" class="dashboard-nav-item"><i class="fas fa-tasks"></i> Employer Tasks</a>
                 <a href="{% url 'assign_task' %}" class="dashboard-nav-item"><i class="fas fa-tools"></i> Maintenance Tasks</a>
-                <a href="#" class="dashboard-nav-item"><i class="fas fa-chart-bar"></i> Analytics and Reporting</a>
+                <a href="{% url 'analytics_dashboard' %}" class="dashboard-nav-item"><i class="fas fa-chart-bar"></i> Analytics and Reporting</a>
                 <a href="{% url 'communication_list' %}" class="dashboard-nav-item"><i class="fas fa-comment-alt"></i> Communication Management</a>
-                <a href="#" class="dashboard-nav-item"><i class="fas fa-wallet"></i> Manage Budget</a>
+                <a href="{% url 'reviews' %}" class="dashboard-nav-item"><i class="fas fa-eye"></i> views review</a>
                 <a href="{% url 'security' %}" class="dashboard-nav-item"><i class="fas fa-lock"></i> Platform Settings</a>
                 <a href="{% url 'gov' %}" class="dashboard-nav-item"><i class="fas fa-university"></i> Liaises with Government Agencies</a>
                 <a href="{% url 'manage_contact' %}" class="dashboard-nav-item"><i class="fas fa-headset"></i> Customer Support</a>
+                <a href="{% url 'damage_report_view' %}" class="dashboard-nav-item"><i class="fas fa-exclamation-triangle"></i> Damage report</a>
+
                 <a href="{% url 'logout' %}" class="dashboard-nav-item"><i class="fas fa-sign-out-alt"></i> Logout</a>
             </nav>
         </div>
